Add¡ng images included in the .tex

--- a/conferences/WAF_2016/BaxterHaptics/BaxterHaptics.tex
+++ b/conferences/WAF_2016/BaxterHaptics/BaxterHaptics.tex
@@ -8,11 +8,11 @@
 
 \title{Strategies for Haptic-Robotic Teleoperation in Board Games: Playing checkers with Baxter}
 
-\author{Gonzalo Esteban, Francisco J. Rodr\'{i}guez--Sedano, Laura Inyesto, Pablo Blanco, Francisco J. Rodr\'{i}guez--Lera
-\IEEEcompsocitemizethanks{\IEEEcompsocthanksitem Miguel Cazorla is with University of Alicante.\protect\\
+\author{Francisco J. Rodr\'{i}guez--Sedano, Gonzalo Esteban, Laura Inyesto, Pablo Blanco, Francisco J. Rodr\'{i}guez--Lera
 
-E-mail: miguel@dccia.ua.es
-\IEEEcompsocthanksitem Vicente Matell\'an is with University of Rey Juan Carlos.} % <-this % s
+\IEEEcompsocitemizethanks{\IEEEcompsocthanksitem Robotics Group. University of Le\'{o}n.\protect\\
+
+E-mail: francisco.sedano@unileon.es, gestec00@estudiantes.unileon.es, linyea00@estudiantes.unileon.es, pblanm02@estudiantes.unileon.es, fjrodl@unileon.es}
 }
 
 
@@ -32,7 +32,7 @@ JoPhA, journal, \LaTeX, paper, template.
 
 
 \section{Introduction}
-% GONZALO?
+% GONZALO
 
 % Teleoperation-telemanipulation and user experience
   \IEEEPARstart{T}{eleoperating} robots is quite a common practice in many fields such as surgery, defence or rescue~\cite{Vertut85}. The reason is simple: assisting a person to perform and accomplish complex or uncertain tasks in some environments may mean the difference between failure or success.
@@ -60,19 +60,107 @@ JoPhA, journal, \LaTeX, paper, template.
 
   A basic telemanipulation system consists of a master robot manipulated by an operator and a slave...
   
+\includegraphics[scale=0.07]{Images/baxterHoldingPiece.jpg} 
+
+
+\begin{table}
+\centering
+\begin{tabular}{c}
+\includegraphics[scale=0.25]{Images/baxterCamaraBrazo.jpg} \\
+\includegraphics[scale=0.25]{Images/baxterCamaraBrazo.jpg} 
+\end{tabular}
+\caption{\label{tabla_joints} Corresponding joints between robot and haptic device.}
+\end{table}
+
+
 
 \subsection{Slave: Haptic Device}
 Haptic feedback takes advantage of the human sense of touch by recreating forces, vibrations or motions to the user. 
 An haptic device allows to feel a feedback from virtual or real objects and produces a realistic touch sensations to a user. 
 The PHANToM Omni is a 6 DOF haptic device that applies haptic feedback. 
 
- 
+\includegraphics[scale=0.5]{Images/Baxter&HapticSmall.jpg} 
 
 It has 3 actuated DOF associated to the armature which provides the translational movements (X, Y, and Z Cartesian coordinates) and other 3 non-actuated DOF associated to the gimball  that gives the orientation (pitch, roll and yaw rotational movements).  The characteristic of this device allow to offer a feedback up to a maximum of 3.3N.
 
 
 \subsection{Master: Baxter}
-Subsubsection text here.
+Subsubsection text here. 
+
+(Paper de Fran)
+
+(Incluir imágenes articulaciones)
+
+\begin{table}
+\centering
+\begin{tabular}{c}
+\includegraphics[scale=1.2]{Images/joint_baxter.png} \\
+\includegraphics[scale=0.4]{Images/joint_haptico.png} 
+\end{tabular}
+\caption{\label{tabla_joints} Corresponding joints between robot and haptic device.}
+\end{table}
+
+%-Redacción.
+%-Archivos.
+%-Fotos.
+%-Corrección.
+%
+%Notas :
+%	- Mueve un solo brazo (sólo tenemos un háptico)
+%	- Sería buena idea revisar las reglas de recogida de datos (impreciso algunas veces)
+%	- Revisión correlación de los joints
+%	- Ajustar el elbow
+%	- Petición para actualizarlo.
+%
+%-----------------------------------------------------------------------------------------------------------------------------
+%Para poder teleoperar a Baxter estamos usando un háptico "Geomatic Touch". 
+%Básicamente queremos reproducir los movimientos que realizamos en el háptico en uno de los brazos de Baxter de forma simultánea con el objetivo de poder jugar a las damas.
+%
+%Primero hemos estudiado los puntos de referencia de Baxter al háptico, ya que al tener menos joints es más complicado transmitir determinados movimientos.
+%
+%La relación de los joints entre Baxter y el háptico establecida es :
+%
+%	Baxter		Háptico	
+%	S0		"Waist"
+%	S1		"Shoulder"
+%	E0		No lo usamos
+%	E1		"Elbow"
+%	W0		No lo usamos
+%	W1		"Wrist2"
+%	W2		No lo usamos
+%
+%Estos joints pueden verse en las fotos adjuntas "joint_haptico" y "joint_baxter".
+%
+%Para poder mover a Baxter con el háptico nos hemos basado en el ejemplo de teleoperación de los brazos por teclado del paquete "Baxter_examples". 
+%
+%Con ayuda de algunas de las instrucciones que se explican en dicho ejemplo conseguimos que los grippers de Baxter se abran y cierren cuando pulsamos los botones del háptico. (NOTA : PENDIENTE DE REVISIÓN, ya que da problemas recogiendo el brazo)
+%
+%Después intentamos reproducir los movimientos en el eje X del háptico en Baxter, para luego recoger los ejes Y Z.
+%Hemos usado los joints de Baxter S0,S1 y W1 para cada uno de los ejes respectivamente.
+%
+%------------------------------------------------
+%
+%Para comunicar los dos nodos (Baxter y Háptico) hacemos que el háptico publique en el topic "geo_touch_right_arm" y en "geo_touch_right_gripper", y que Baxter recoja de los mismos. 
+%El háptico solo publica en el topic "geo_touch_right_arm" si uno de los tres joints que usamos se mueve una distancia mayor de 
+%|0.01|
+%
+%También hemos creado un tipo de mensaje personalizado que nos permite comunicar a Baxter qué joint ha de mover y la distancia que ha de moverlo, además de otro que recoge si el gripper debe o no abrirse. 
+%Todo ello lo hemos guardado en un paquete "omni_geo_touch_1".
+%
+%Para ello, en el archivo geo_touch.cpp , hemos ampliado el código para que cuando el háptico se mueva dentro de un determinado rango en un intervalo corto de tiempo (para así evitar movimientos muy leves) publique qué joint tiene que mover Baxter en relación con el que se ha movido en el háptico y la distancia (convertida al rango de Baxter) que debe moverse. 
+% 
+%------------------------------------------------
+%
+%Ha sido necesario obtener los valores numéricos de los extremos de cada eje tanto en Baxter como en el háptico.
+%Una vez podemos hacer una conversión (cambio de base) apropiada es relativamente sencillo hacer una correlación Háptico-Baxter.
+%
+%
+%Los mayores problemas que hemos tenido han sido ajustar de manera apropiada la distancia de movimiento de los joints en Baxter. El ratio de publicación también ha dado problemas, ya que algunas veces iba muy rápido. 
+%A veces, muchos de los movimientos programados quedaban en la cola, con el resultado de que el háptico se movía a la izquierda pero en la cola todavía quedaban mensajes de mover hacia la derecha, produciéndose un retardo notable.
+
+
+
+
 
 \subsection{Controller}
 {\color{red}{Hay que adaptar a nuestro sistema}}
@@ -99,6 +187,7 @@ The game consists on move a piece diagonally to an adjacent unoccupied square. I
 
 \subsection{Board adaptation}
 
+\includegraphics[scale=0.35]{Images/print_3D_2.jpg} 
 
 \subsection{Evaluation}
 
