--- a/conferences/WAF_2016/Seguridad/waf2016.tex
+++ b/conferences/WAF_2016/Seguridad/waf2016.tex
@@ -141,12 +141,6 @@ The decorator pattern can be used to extend (decorate) the functionality of a ce
 
 
 
-\begin{figure}[ht]
-    \centering
-    \includegraphics[width=.5\textwidth]{Screenshot.png}
-    \caption{Time spent in each call to encryption/decryption function.}
-  \label{fig:Conceptualmodel}
-\end{figure}
 
 
 \subsection{Robotic testbed}
@@ -185,52 +179,77 @@ def fn_timer(function):
   }
 }
 
-\begin{figure*}[ht]
-    \centering
-    \includegraphics[width=.9\textwidth]{Outline_images_encryption_decrytiontime2.png}
-    \caption{Time spent in each call to encryption/decryption function.}
-  \label{fig:Conceptualmodel}
-\end{figure*}
+
 
 
 \subsection{Camera}
 
-\subsubsection{Traffic Data}
+\subsubsection{Process evaluation}
 
-There are three nodes involved in our system: usb\_cam, encrypte\_node and decrypted\_node. The first and the sencond run in the master computer, the decrypted one in a new computer.
+We have used a Logitech, Inc. QuickCam Pro 9000 webcam.
 
-There are three topics involved 
+There are three nodes involved in our system: usb\_cam, encrypte\_node and decrypted\_node. The first and the sencond run in the master computer, the decrypted one in a separate computer.
 
-To analyse the behaviour of the system under encrypt/decrypt circumstances we 
+There are three topics involved: 
 
-PC: 234 process
+To analyse the behaviour of the system under encrypt/decrypt circumstances we use an intel i7 computer with 16 GM RAM. The ROS master system has 234 process running by default in a Ubuntu 14.04, the client is running 242 process in the same operative system.
 
-Total length 971790 frames, min time 0.001309 seconds, max time  0.026909
-Cifrado mean: 0.010948
-Cifrado stdev: 0.000004
-El valor moda de la fase de cifrado fue:
-(array([ 0.010571]), array([ 415.]))
+In this case we measure the time needed to encrypt or decrypt the ROS message ({\em sensor\_msgs/Image.msg}). We just encrypt or decrypt the field data of {\em uint8[]} that is treated as a string.
 
-Descifrado length: 969295.000000
-Descifrado min: 0.001288
-Descifrado max: 0.039130
-Descifrado mean: 0.008828
-Descifrado stdev: 0.000003
-El valor moda de la fase de descifrado fue:
-(array([ 0.008183]), array([ 593.]))
+This experiment was running for about 18 hours sending in total 971790 frames. The minimal time to encrypt the images was 0.001309 seconds, the max time  0.026909 seconds with a 
+mean of  0.010948 seconds and a standard deviation of 0.000004 seconds. The mode value in this phase was 0.010571 seconds wich was reapeated 415 times. 
+
+The minimal time to decrypt the images was 0.001288 seconds, the max time was 0.039130 seconds with a 
+mean of  0.008828 seconds and a standard deviation of 0.000003 seconds. The mode value in this phase was 0.008183 seconds wich was reapeated 593 times. 
 
 
-PC descifrador: 242 process (ps -ef | wc -l)
+The figure~\ref{fig:graphicalRepresentation} presents the box-plot of the encryption decryption data analyzed and the histograma. 
 
-Cifrador
-[INFO] Encrypter node:  elasped time: 66755.17
-[INFO] Encrypter node:  approx. FPS: 14.56
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=.5\textwidth]{Screenshot.png}
+    \caption{Time spent in each call to encryption/decryption function.}
+  \label{fig:graphicalRepresentation}
+\end{figure}
+
+
+Our application present the frame rate during the execution in master and client machines. The fps in the encrypter machine is 14.56 and the fps in the decryption machine is 14.54.
+We observe that the delay induced by encryption does not reduce the standard frame rate. 
 
 
 
-Descifrador
-[INFO] Decrypter node: elapsed time: 66659.74
-[INFO] Decrypter node: approx. FPS: 14.54
+
+Figure \ref{fig:images_encryption} presents the situation in the client node. We have used the ROS node {\em image\_view} to visualize the images from topics.  There is an non-encrypted topic that we have maintanined in order to validate delays. There is an encrypted topic that is not possible to visualize using the releeased image\_view ROS node. Finally there is a frame that presents the image after decrypt the topic using our own decrypt node. 
+
+\begin{figure*}[ht!]
+    \centering
+    \includegraphics[width=.9\textwidth]{Outline_images_encryption_decrytiontime2.png}
+    \caption{Time spent in each call to encryption/decryption function.}
+  \label{fig:images_encryption}
+\end{figure*}
+
+
+
+% Descifrado length: 969295.000000
+% Descifrado min: 0.001288
+% Descifrado max: 0.039130
+% Descifrado mean: 0.008828
+% Descifrado stdev: 0.000003
+% El valor moda de la fase de descifrado fue:
+% (array([ 0.008183]), array([ 593.]))
+% At the same time 
+% 
+% PC descifrador: 242 process (ps -ef | wc -l)
+% 
+% Cifrador
+% [INFO] Encrypter node:  elasped time: 66755.17
+% [INFO] Encrypter node:  approx. FPS: 14.56
+% 
+% 
+% 
+% Descifrador
+% [INFO] Decrypter node: elapsed time: 66659.74
+% [INFO] Decrypter node: approx. FPS: 14.54
 
 
 
